up to CATS section revised

--- a/References/references.bib
+++ b/References/references.bib
@@ -1123,3 +1123,13 @@ issn = "0167-739X",
 doi = "http://dx.doi.org/10.1016/j.future.2013.09.006",
 author = "Fan Zhang and Junwei Cao and Keqin Li and Samee U. Khan and Kai Hwang",
 }
+
+@inproceedings{Chronaki:TPDS, 
+author={K. Chronaki and A. Rico and M. Casas and M. Moretó and R. M. Badia and E. Ayguadé and J. Labarta and M. Valero}, 
+journal={IEEE Transactions on Parallel and Distributed Systems}, 
+title={Task Scheduling Techniques for Asymmetric Multi-Core Systems}, 
+year={2017}, 
+volume={28}, 
+number={7}, 
+pages={2074-2087}, 
+}
