--- a/bigLittlePARSEC/04-experimental.tex
+++ b/bigLittlePARSEC/04-experimental.tex
@@ -19,7 +19,7 @@ measured performance ratio between big and little cores}
 	streamcluster & 200K points per block, 5 block & data-parallel & 3.48 \\ \hline
 	swaptions & 128 swaptions, 1 million  simulations & data-parallel & 2.78 \\ \hline
 	\end{tabular}
-	\label{tab:AMC.apps}
+	\label{tab.AMC.apps}
 	%\vspace{-0.3cm}
 \end{table*}
 
