--- a/scheduling/cpath.tex
+++ b/scheduling/cpath.tex
@@ -1,5 +1,5 @@
-\subsection{Critical Path Scheduler}
-\label{sec.cpath}
+\section{Critical Path Scheduler}
+\label{sec.scheduling.cpath}
 \begin{figure}[tr]
 \includegraphics[width=\columnwidth]{images/cpath_priorities.pdf} 
 \centering
