--- a/scheduling/hybrid.tex
+++ b/scheduling/hybrid.tex
@@ -1,5 +1,5 @@
-\subsection{Hybrid Criticality Scheduler}
-
+\section{Hybrid Criticality Scheduler}
+\label{sec.scheduling.hybrid}
 
 The Hybrid Criticality Scheduler (HYBRID) is a combination of the CATS and CPATH scheduling policies.
 HYBRID keeps the simplicity of the implementation of CATS and introduces the task execution time only if available.
