--- a/scheduling/paperScheduling.tex
+++ b/scheduling/paperScheduling.tex
@@ -5,17 +5,10 @@
 \label{sec:intro}
 \input{scheduling/01-introduction}
 
-
 %%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%
-\section{Background}
-\label{sec:background}\label{sec:suitability}
-\input{scheduling/02-background}
-
-%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%
-\section{Heterogeneous Scheduling}
-\label{sec:scheduling}
+%\section{Heterogeneous Scheduling}
+%\label{sec:scheduling}
 \input{scheduling/03-scheduling}
 
 %%%%%%%%%%%%%%%%%%%
